--- a/static/index.html
+++ b/static/index.html
@@ -105,6 +105,6 @@
         </button>
     </div>
     
-    <script src="/static/app.js"></script>
+    <script src="/app.js" defer></script>
 </body>
 </html> 
