--- a/static/index.html
+++ b/static/index.html
@@ -39,8 +39,8 @@
         }
         
         lottie-player {
-            width: min(200px, 50vw);
-            height: min(200px, 50vw);
+            width: min(300px, 70vw);
+            height: min(300px, 70vw);
             cursor: pointer;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
         }
@@ -81,6 +81,9 @@
         <lottie-player 
             id="blob"
             src="https://cdn.lottielab.com/l/CvwU7fnRPGbX7Q.json" 
+            background="transparent"
+            speed="1"
+            style="width: 100%; height: 100%;"
             loop>
         </lottie-player>
     </div>
