fix: update Lottie animation source and adjust blob size

--- a/static/index.html
+++ b/static/index.html
@@ -39,8 +39,8 @@
         }
         
         lottie-player {
-            width: min(300px, 70vw);
-            height: min(300px, 70vw);
+            width: 200px;
+            height: 200px;
             cursor: pointer;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
         }
@@ -80,11 +80,12 @@
     <div class="blob-container">
         <lottie-player 
             id="blob"
-            src="https://cdn.lottielab.com/l/CvwU7fnRPGbX7Q.json" 
+            src="https://cdn.lottielab.com/l/9Z59mLbw8LC1T6.json" 
             background="transparent"
             speed="1"
             style="width: 100%; height: 100%;"
-            loop>
+            loop
+            renderer="svg">
         </lottie-player>
     </div>
     
