--- a/static/index.html
+++ b/static/index.html
@@ -36,6 +36,7 @@
             justify-content: center;
             width: 100%;
             padding: 20px;
+            position: relative;
         }
         
         lottie-player {
@@ -43,6 +44,10 @@
             height: 200px;
             cursor: pointer;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         
         .controls {
@@ -83,7 +88,6 @@
             src="https://cdn.lottielab.com/l/9Z59mLbw8LC1T6.json" 
             background="transparent"
             speed="1"
-            style="width: 100%; height: 100%;"
             loop
             renderer="svg">
         </lottie-player>
