Switch to local blob.json and remove watermark

--- a/static/index.html
+++ b/static/index.html
@@ -85,7 +85,7 @@
     <div class="blob-container">
         <lottie-player 
             id="blob"
-            src="https://cdn.lottielab.com/l/9Z59mLbw8LC1T6.json" 
+            src="/static/blob.json" 
             background="transparent"
             speed="1"
             loop
