--- a/static/index.html
+++ b/static/index.html
@@ -89,6 +89,7 @@
             background="transparent"
             speed="1"
             loop
+            autoplay
             renderer="svg">
         </lottie-player>
     </div>
@@ -106,6 +107,20 @@
         </button>
     </div>
     
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const blob = document.querySelector('#blob');
+            if (blob) {
+                blob.addEventListener('error', (e) => {
+                    console.error('Error loading animation:', e);
+                });
+                
+                blob.addEventListener('ready', () => {
+                    console.log('Animation loaded successfully');
+                });
+            }
+        });
+    </script>
     <script src="/app.js" defer></script>
 </body>
 </html> 
