Remove animation ID comment from DOM

--- a/static/index.html
+++ b/static/index.html
@@ -91,7 +91,8 @@
             speed="1"
             loop
             autoplay
-            renderer="svg">
+            renderer="svg"
+            style="display: block;">
         </lottie-player>
     </div>
     
