Fix blob.gif path in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
     <div class="blob-container">
         <img 
             id="blob"
-            src="/blob.gif" 
+            src="/static/blob.gif" 
             alt="Animated blob"
             class="blob">
     </div>
