Fix assistant response and update blob to use iframe embed

--- a/static/index.html
+++ b/static/index.html
@@ -85,17 +85,12 @@
 </head>
 <body>
     <div class="blob-container">
-        <lottie-player 
-            id="blob"
-            src="https://cdn.lottielab.com/l/9Z59mLbw8LC1T6.json" 
-            background="transparent"
-            speed="1"
-            loop
-            autoplay
-            preserveAspectRatio="xMidYMid meet"
-            renderer="svg"
-            style="mix-blend-mode: multiply; filter: saturate(1.2) brightness(1.1);">
-        </lottie-player>
+        <iframe 
+            src="https://embed.lottielab.com/animation/9Z59mLbw8LC1T6?mode=normal&background=transparent" 
+            width="360" 
+            height="360" 
+            style="border: none; pointer-events: none;">
+        </iframe>
     </div>
     
     <div class="controls">
