--- a/static/index.html
+++ b/static/index.html
@@ -85,12 +85,15 @@
 </head>
 <body>
     <div class="blob-container">
-        <iframe 
-            src="https://embed.lottielab.com/animation/9Z59mLbw8LC1T6?mode=normal&background=transparent" 
-            width="360" 
-            height="360" 
-            style="border: none; pointer-events: none;">
-        </iframe>
+        <lottie-player 
+            id="blob"
+            src="https://cdn.lottielab.com/l/9Z59mLbw8LC1T6.json" 
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+            style="width: 360px; height: 360px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 10;">
+        </lottie-player>
     </div>
     
     <div class="controls">
